# jaxDecomp

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: formatting.yml  github-deploy.yml  joss-paper-pdf.yml  tests.yml  wheels.yml
benchmarks/: bench.py  jaxfft.py  mpi4jaxfft.py  slurm.sh  slurm_strong_scaling.sh
configs/: nvhpcsdk_jz.conf
docs/: 01-basic_usage.md  02-caveats.md  02-decomposition.md  03-distributed_ffts.md  04-halo_exchange.md  05-transpositions.md  07-xla_sharding_configuration.md  api.rst  conf.py  index.rst  installation.md  requirements.txt
examples/: 01-demo_features.ipynb  02-tpu_fft_demo.ipynb  03-nested-paralleism.ipynb  03-nested-parallelism.ipynb  README.md  demo_features.ipynb  growth.py  jax_issue_explicit_axis_bug.md  jaxdecomp_lpt.py  lpt_nbody_demo.py  scatter.py  submit_rusty.sbatch  tpu_fft_demo.ipynb  utils.py
include/: AsyncLogger.hpp  GridDescriptorManager.h  checks.h  fft.h  grid_descriptor_mgr.h  halo.h  helpers.h  logger.hpp  perfostep.hpp  transpose.h
jaxdecomp/: __init__.py  fft.py  halo.py  transpose.py  typing.py
jaxdecomp/_src/: __init__.py  fft.py  fft_utils.py  halo.py  ops.py  padding.py  pencil_utils.py  spmd_ops.py  transpose.py
jaxdecomp/_src/cudecomp/: fft.py  halo.py  transpose.py
jaxdecomp/_src/jax/: __init__.py  fft.py  fftfreq.py  halo.py  transpose.py
jaxdecomp/jax/: __init__.py  jax_fft.py  jax_halo.py  jax_transpose.py
joss-paper/: paper.bib  paper.md
joss-paper/examples/: jaxdecomp_lpt.py  utils.py  visualizer.ipynb
scripts/: autotune.py  test.py  test_fft3d.py  test_real.py
slurms/: README.md  template.slurm
src/: GridDescriptorManager.cpp  checks.h  fft.cu  fft.h  grid_descriptor_mgr.cc  halo.cu  halo.h  helpers.h  jaxdecomp.cc  jaxdecomp.h  main.cc  transpose.cu
src/csrc/: fft.cu  grid_descriptor_mgr.cc  halo.cu  jaxdecomp.cc  transpose.cu
src/csrc/include/: grid_descriptor_mgr.h  halo.h  helpers.h  jaxdecomp.h  logger.hpp  perfostep.hpp
src/jaxdecomp/: __init__.py  fft.py  halo.py  transpose.py  typing.py
src/jaxdecomp/_src/: __init__.py  error.py  fft_utils.py  pencil_utils.py  sharded_array.py  spmd_ops.py
src/jaxdecomp/_src/cudecomp/: fft.py  halo.py  transpose.py
src/jaxdecomp/_src/jax/: fft.py  fftfreq.py  halo.py  transpose.py
tests/: conftest.py  run_all_tests.sh  test_allgather.py  test_fft.py  test_halo.py  test_padding.py  test_transpose.py
