[build-system]
requires = ["scikit-build-core>=0.4.0", "pybind11>=2.9.0"]
build-backend = "scikit_build_core.build"
[project]
name = "jaxdecomp"
version = "0.2.4"
description = "JAX bindings for the cuDecomp library"
authors = [
  { name = "Wassim Kabalan" },
  { name = "Francois Lanusse"}
]
urls = { "Homepage" = "https://github.com/DifferentiableUniverseInitiative/jaxDecomp" }
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
]
dependencies = [
"jaxtyping>=0.2.0",
"jax>=0.4.35",
"typing-extensions; python_version < '3.11'",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.25"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_LIBRARY_OUTPUT_DIRECTORY = ""

[tool.cibuildwheel]
test-extras = "test"
test-command = "pytest {project}/tests"
[tool.ruff]
extend-ignore = ["E402"]
